[package]
name = "tauri-bundler"
version = "2.0.1-rc.9"
authors = [
  "George Burton <burtonageo@gmail.com>",
  "Tauri Programme within The Commons Conservancy",
]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]
license = "Apache-2.0 OR MIT"
keywords = ["bundle", "cargo", "tauri"]
repository = "https://github.com/tauri-apps/tauri"
description = "Wrap rust executables in OS-specific app bundles for Tauri"
edition = "2021"
rust-version = "1.71"
exclude = ["CHANGELOG.md", "/target", "rustfmt.toml"]

[dependencies]
tauri-utils = { version = "2.0.0-rc.9", path = "../tauri-utils", features = [
  "resources",
] }
image = "0.25.0"
flate2 = "1.0"
anyhow = "1.0"
thiserror = "1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
strsim = "0.11.0"
tar = "0.4.40"
walkdir = "2"
handlebars = "6"
tempfile = "3.10.1"
log = { version = "0.4.21", features = ["kv"] }
dirs = "5"
os_pipe = "1"
ureq = { version = "2.9.6", default-features = false, features = [
  "socks-proxy",
] }
native-tls = { version = "0.2", optional = true }
hex = "0.4"
semver = "1"
sha1 = "0.10"
sha2 = "0.10"
zip = { version = "2.0", default-features = false, features = ["deflate"] }
dunce = "1"
url = "2"

[target."cfg(target_os = \"windows\")".dependencies]
uuid = { version = "1", features = ["v4", "v5"] }
bitness = "0.4"
windows-registry = "0.2.0"
glob = "0.3"

[target."cfg(target_os = \"windows\")".dependencies.windows-sys]
version = "0.59"
features = ["Win32_System_SystemInformation", "Win32_System_Diagnostics_Debug"]

[target."cfg(target_os = \"macos\")".dependencies]
icns = { package = "tauri-icns", version = "0.1" }
time = { version = "0.3", features = ["formatting"] }
plist = "1"
tauri-macos-sign = { version = "0.1.1-rc.0", path = "../tauri-macos-sign" }

[target."cfg(any(target_os = \"macos\", target_os = \"windows\"))".dependencies]
regex = "1"

[target."cfg(target_os = \"linux\")".dependencies]
heck = "0.5"
ar = "0.9.0"
md5 = "0.7.0"
rpm = "0.15.0"

[lib]
name = "tauri_bundler"
path = "src/lib.rs"

[features]
default = ["rustls"]
native-tls = ["ureq/native-tls"]
native-tls-vendored = ["native-tls", "native-tls/vendored"]
rustls = ["ureq/tls"]
